force-app/main/default/objects/redwing__Learning_Search_Category__c/redwing__Learning_Search_Category__c.object-meta.xml
<CustomObject>
    <label>Learning Search Category</label>
    <nameField>
        <label>Learning Search Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Search Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>