force-app/main/default/objects/redwing__Learning_Search_Category__c/fields/redwing__Active__c.field-meta.xml
<CustomField>
    <fullName>redwing__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>