force-app/main/default/objects/redwing__Learning_Search_Category__c/fields/redwing__Plural_Learning_Search_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Plural_Learning_Search_Category_Name__c</fullName>
    <label>Plural Learning Search Category Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>